{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "98ae4154-96d0-7d4f-2d98-529ddb86aa50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:701545181846:internet-gateway/igw-063a9dfe3730b4de9",
            "id": "igw-063a9dfe3730b4de9",
            "owner_id": "701545181846",
            "tags": {
              "Name": "ll-prod-main-igw"
            },
            "tags_all": {
              "Name": "ll-prod-main-igw"
            },
            "vpc_id": "vpc-0047f130fb2813329"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063a9dfe3730b4de9",
            "id": "r-rtb-0747f500431864c391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0747f500431864c39",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:701545181846:route-table/rtb-0747f500431864c39",
            "id": "rtb-0747f500431864c39",
            "owner_id": "701545181846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ll-prod-main-public-route-table"
            },
            "tags_all": {
              "Name": "ll-prod-main-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0047f130fb2813329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adc3573fbe82b0ba",
            "route_table_id": "rtb-0747f500431864c39",
            "subnet_id": "subnet-09901cf74efac96e6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:701545181846:subnet/subnet-0c73e18d663a665da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.170.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73e18d663a665da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701545181846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "main",
              "Name": "ll-prod-main-private_subnet",
              "Namespace": "ll",
              "Stage": "prod"
            },
            "tags_all": {
              "Attributes": "main",
              "Name": "ll-prod-main-private_subnet",
              "Namespace": "ll",
              "Stage": "prod"
            },
            "vpc_id": "vpc-0047f130fb2813329"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:701545181846:subnet/subnet-09901cf74efac96e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.170.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09901cf74efac96e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701545181846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "main",
              "Name": "ll-prod-main-public_subnet",
              "Namespace": "ll",
              "Stage": "prod"
            },
            "tags_all": {
              "Attributes": "main",
              "Name": "ll-prod-main-public_subnet",
              "Namespace": "ll",
              "Stage": "prod"
            },
            "vpc_id": "vpc-0047f130fb2813329"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:701545181846:vpc/vpc-0047f130fb2813329",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.170.0.0/20",
            "default_network_acl_id": "acl-009702ec0aebedc7a",
            "default_route_table_id": "rtb-03af18bec84bacf19",
            "default_security_group_id": "sg-0aa98d1383a254216",
            "dhcp_options_id": "dopt-0dbb0e7da7dbbfd67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0047f130fb2813329",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03af18bec84bacf19",
            "owner_id": "701545181846",
            "tags": {
              "Attributes": "main",
              "Name": "ll-prod-vpc-main",
              "Namespace": "ll",
              "Stage": "prod"
            },
            "tags_all": {
              "Attributes": "main",
              "Name": "ll-prod-vpc-main",
              "Namespace": "ll",
              "Stage": "prod"
            }
          }
        }
      ]
    }
  ]
}